--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -82,15 +82,13 @@ jobs:
 
       - name: Update version files and commit changes
         if: env.new_version_available == 'true'
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           cp tg_version.txt backup_tg_version.txt
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add tg_version.txt backup_tg_version.txt
           git commit -m "Update version files to $(cat tg_version.txt)"
-          git push https://x-access-token:${GH_PAT}@github.com/AbhiTheModder/termux-scripts.git HEAD:main
+          git push
 
       - name: Notify and send patched APK to Telegram
         if: env.new_version_available == 'true'
