--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -86,30 +86,32 @@ jobs:
           cp tg_version.txt backup_tg_version.txt
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add tg_version.txt backup_tg_version.txt
+          git add backup_tg_version.txt
           git commit -m "Update version files to $(cat tg_version.txt)"
           git push
 
-      - name: Upload Patched APK to x0.at
+      - name: Create GitHub Release
         if: env.new_version_available == 'true'
-        id: upload_apk
-        run: |
-          response=$(curl -F "file=@Telegram_Patched.apk" https://x0.at/)
-          echo "upload_url=$response" >> $GITHUB_ENV
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: "v$(cat tg_version.txt)"
+          release_name: "Telegram Patch v$(cat tg_version.txt)"
+          draft: false
+          prerelease: false
 
-      - name: Calculate Expiration Date
+      - name: Upload Patched APK to Release
         if: env.new_version_available == 'true'
-        id: calculate_expiration
-        run: |
-          FILE_SIZE=$(stat -c%s "Telegram_Patched.apk")
-          MAX_SIZE=$((222 * 1024 * 1024)) # 222 MiB in bytes
-          MIN_AGE=3
-          MAX_AGE=100
-          SCALE=2
-          FILE_SIZE_RATIO=$(echo "$FILE_SIZE/$MAX_SIZE" | bc -l)
-          EXPIRATION_DAYS=$(echo "$MIN_AGE + ($MAX_AGE - $MIN_AGE) * (1 - $FILE_SIZE_RATIO)^2" | bc -l)
-          EXPIRATION_DAYS=$(printf "%.0f" "$EXPIRATION_DAYS")
-          echo "expiration_days=$EXPIRATION_DAYS" >> $GITHUB_ENV
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: Telegram_Patched.apk
+          asset_name: Telegram_Patched.apk
+          asset_content_type: application/vnd.android.package-archive
 
       - name: Notify Telegram about new release
         if: env.new_version_available == 'true'
@@ -119,10 +121,9 @@ jobs:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           format: HTML
           message: |
-            <b>project:</b> Telegram Auto-Patcher
-            <b>status:</b> New version patched successfully!
-            <b>commit:</b> <a href="https://github.com/AbhiTheModder/termux-scripts/commit/${{ github.sha }}">${{ github.sha }}</a>
-            <b>repo:</b> <a href="https://github.com/AbhiTheModder/termux-scripts">AbhiTheModder/termux-scripts</a>
+            project: Telegram Auto-Patcher
+            status: New version patched successfully!
+            commit: <a href="https://github.com/AbhiTheModder/termux-scripts/commit/${{ github.sha }}">${{ github.sha }}</a>
+            repo: <a href="https://github.com/AbhiTheModder/termux-scripts">AbhiTheModder/termux-scripts</a>
             The patched APK file is available for download at the link below.
-            <a href="${{ env.upload_url }}">Download Patched APK</a>
-            The file will be available for approximately <code>${{ env.expiration_days }}</code> days.
+            <a href="https://github.com/AbhiTheModder/termux-scripts/releases/latest/download/Telegram_Patched.apk">Download Patched APK</a>
