--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -114,7 +114,7 @@ jobs:
         if: env.new_version_available == 'true'
         uses: appleboy/telegram-action@master
         with:
-          to: "${{ secrets.TELEGRAM_CHAT_ID }},${{ secrets.TELEGRAM_CHAT_ID_2 }}"
+          to: "${{ secrets.TELEGRAM_CHAT_ID }},${{ secrets.TELEGRAM_CHAT_ID_2 }},${{ secrets.TELEGRAM_CHAT_ID_3 }}"
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           format: HTML
           message: |
@@ -140,7 +140,7 @@ jobs:
         if: env.new_version_available == 'true'
         uses: appleboy/telegram-action@master
         with:
-          to: "${{ secrets.TELEGRAM_CHAT_ID }},${{ secrets.TELEGRAM_CHAT_ID_2 }}"
+          to: "${{ secrets.TELEGRAM_CHAT_ID }},${{ secrets.TELEGRAM_CHAT_ID_2 }},${{ secrets.TELEGRAM_CHAT_ID_3 }}"
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           format: HTML
           message: |
