add release info

--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -130,6 +130,8 @@ jobs:
             
             **❏Changelogs:**
             ● See [Full Changelogs](https://telegra.ph/Telegram-premium-08-16-5)
+
+            - **Released by [`Abhi`]**
             
             👉 **How to Save/Forward from copyrighted channels:** [Watch Here](https://youtu.be/TIlxcnzC-mM)
 
@@ -163,6 +165,8 @@ jobs:
             ● See <a href="https://telegra.ph/Telegram-premium-08-16-5"> Full Changelogs</a>
             ● Everything included in Normal mod and: 
             - Anti Messages Delete
+
+            - **Released by [`Abhi`]**
             
             👉 **How to Save/Forward from copyrighted channels:** [Watch Here](https://youtu.be/TIlxcnzC-mM)
 
